# Manipulator-Environment

./: .gitignore  README.md
arm_description/: CMakeLists.txt  package.xml
arm_description/config/: arm_sim.yaml  joint_controller.yaml
arm_description/control/: arm.ros2_control.urdf.xacro  arm.ros2_control.xacro  arm_control.py  arm_controller.yaml  arm_ctrl.py  arm_ros2_control.urdf.xacro  arm_ros2_control.xacro  control_gazebo.xacro  controllers.yaml  gazebo_sim_ros2_control.urdf.xacro  trajectory_control.py
arm_description/launch/: arm.launch.py  arm_control.launch.py  arm_state_publisher.py  gazebo.launch.py  jsp.launch.py  rsp_sim.launch.py  rviz.launch.py  rviz_jsp.launch.py
arm_description/meshes/forearm/: j6_nema8.stl  j6_nema8.stp
arm_description/model/: arm.gazebo  arm.gazebo.xacro  arm.urdf  arm.urdf.xacro
arm_description/model/arm/meshes/: link1.STL  link2.STL  link3.STL  link4.STL
arm_description/model/arm/urdf/: arm.csv  arm.urdf
arm_description/model/arm_2/: CMakeLists.txt  package.xml
arm_description/model/arm_2/config/: joint_names_arm_2.yaml
arm_description/model/arm_2/launch/: display.launch  gazebo.launch
arm_description/model/arm_2/meshes/: base_link.STL  ee.STL  link1.STL  link2.STL
arm_description/model/arm_2/urdf/: arm_2.csv  arm_2.urdf
arm_description/model/camera/: camera.gazebo  camera.urdf.xacro  camera.xacro
arm_description/model/meshes/: fingerL.STL  fingerR.STL  link3.STL  link4.STL  link5.STL
arm_description/model/meshes/base/: base_pulley.dae  base_structure.dae  base_structure_cover.dae  motor_spacer_1.dae
arm_description/model/meshes/camera/: camera.dae
arm_description/model/meshes/forearm/: Rotation arm V3.3mf  forearm_rotation.dae  forearm_structure.dae  j3_pulley.dae  j5_bearing_adapter.dae  j5_motor_adapter.dae  j6_housing.dae  j6_nema8.dae
arm_description/model/meshes/stand/: base_tube.dae  baseplate.dae  mounting_plate.dae
arm_description/model/meshes/upperarm/: j2_pulley.dae  upper_bearing_mount.dae  upper_housing.dae  upper_pulley_spacer.dae  upper_structure.dae
arm_description/model/temp/v1/: arm.gazebo.xacro  (+1 more)
arm_description/rviz/: arm_description.rviz
arm_description/src/: joint_publisher.cpp
arm_description/urdf/: arm.urdf  arm.urdf.xacro
arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
arm_moveit_config/config/: arm.ros2_control.xacro  arm.srdf  arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
arm_moveit_config/launch/: moveit_control.launch.py  moveit_link.launch.py
arm_moveit_config/src/: moveit_control.cpp  moveit_ready.cpp  moveit_return.cpp  moveit_seq.cpp
arm_simulation/: CMakeLists.txt  package.xml
arm_simulation/config/: arm_bridge.yaml  arm_cam.xacro.urdf  bridge.yaml  ros_gz_bridge.yaml
arm_simulation/launch/: arm.gazebo.launch.py  arm_spawn.launch.py  bridge.launch.py  controller.launch.py  gazebo.launch.py  rl_env.launch.py  test_gazebo.launch.py  twin.launch.py  world.gazebo.launch.py
arm_simulation/scripts/: dataset_gen.py  dataset_generator.py  picture_subscriber.py  world_gen.py
arm_simulation/scripts/generated_worlds/: world_0.json  world_0.sdf  world_1.json  world_10.json  world_10.sdf  world_11.json  world_12.json  world_12.sdf  world_13.json  world_13.sdf  world_14.json  world_14.sdf  world_15.json  world_16.json  world_16.sdf  world_17.json  world_17.sdf  world_18.json  world_18.sdf  world_19.json  world_19.sdf  world_2.json  world_2.sdf  world_20.json  world_21.json  world_22.json  world_22.sdf  world_23.json  world_23.sdf  world_24.json  world_24.sdf  world_25.json  world_25.sdf  world_26.json  world_26.sdf  world_27.json  world_27.sdf  world_28.json  world_28.sdf  world_29.json  (+135 more)
arm_simulation/worlds/: arm_solo.sdf  arm_world.sdf
arm_simulation/worlds/dataset_worlds/: world_0.sdf  world_1.sdf  world_10.sdf  world_11.sdf  world_12.sdf  world_13.sdf  world_15.sdf  world_17.sdf  world_18.sdf  world_19.sdf  world_2.sdf  world_20.sdf  world_21.sdf  world_22.sdf  world_23.sdf  world_24.sdf  world_26.sdf  world_27.sdf  world_28.sdf  world_29.sdf  world_31.sdf  world_32.sdf  world_33.sdf  world_34.sdf  world_36.sdf  world_37.sdf  world_38.sdf  world_39.sdf  world_4.sdf  world_41.sdf  world_42.sdf  world_43.sdf  world_44.sdf  world_45.sdf  world_46.sdf  world_47.sdf  world_48.sdf  world_5.sdf  world_51.sdf  world_52.sdf  (+37 more)
arm_simulation/worlds/table/: model.sdf
(+65 files in other folders)
